tests/ui/const-generics/mgca/wrong_type_const_arr_diag_trait.stderr
error[E0308]: mismatched types
  --> $DIR/wrong_type_const_arr_diag_trait.rs:17:51
   |
LL |     let _: TakesArr<{ [<u8 as Trait>::ASSOC] }> = TakesArr::<{ [1] }>;
   |            ------------------------------------   ^^^^^^^^^^^^^^^^^^^ expected `[<u8 as Trait>::ASSOC]`, found `*b"\x01"`
   |            |
   |            expected due to this
   |
   = note: expected struct `TakesArr<[<u8 as Trait>::ASSOC]>`
              found struct `TakesArr<*b"\x01">`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
